--- a/power.ipynb
+++ b/power.ipynb
@@ -24,7 +24,15 @@
    "outputs": [],
    "source": [
     "import pyomo.environ as pyo\n",
-    "from solar_installations import INSTALLATION_SIZES"
+    "from solar_installations import INSTALLATION_SIZES\n",
+    "from pyomo.util.check_units import assert_units_consistent\n",
+    "from pyomo.environ import units\n",
+    "from pyomo.core.base import SOSConstraint\n",
+    "from pyomo.util.check_units import _component_data_handlers\n",
+    "\n",
+    "_component_data_handlers[SOSConstraint] = None\n",
+    "\n",
+    "units.load_definitions_from_strings([\"USD = [currency]\"])"
    ]
   },
   {
@@ -68,29 +76,36 @@
     "model = pyo.ConcreteModel()\n",
     "\n",
     "\n",
-    "model.peak_load = pyo.Param(initialize=PEAK_CONSUMPTION)\n",
-    "model.off_peak_load = pyo.Param(initialize=OFF_PEAK_CONSUMPTION)\n",
-    "model.peak_grid_price = pyo.Param(initialize=PEAK_PRICE)\n",
-    "model.off_peak_grid_price = pyo.Param(initialize=OFF_PEAK_PRICE)\n",
-    "model.battery_cost_per_kw = pyo.Param(initialize=BATTERY_COST_PER_KW)\n",
+    "model.peak_load = pyo.Param(initialize=PEAK_CONSUMPTION, units=units.kWh)\n",
+    "model.off_peak_load = pyo.Param(initialize=OFF_PEAK_CONSUMPTION, units=units.kWh)\n",
+    "model.peak_grid_price = pyo.Param(initialize=PEAK_PRICE, units=units.USD / units.kWh)\n",
+    "model.off_peak_grid_price = pyo.Param(\n",
+    "    initialize=OFF_PEAK_PRICE, units=units.USD / units.kWh\n",
+    ")\n",
+    "model.battery_cost_per_kw = pyo.Param(\n",
+    "    initialize=BATTERY_COST_PER_KW, units=units.USD / units.kWh\n",
+    ")\n",
     "\n",
     "\n",
     "model.SOLAR_SIZES = pyo.Set(initialize=INSTALLATION_SIZES.keys())\n",
-    "model.solar_size_flags = pyo.Var(model.SOLAR_SIZES, within=pyo.Binary)\n",
-    "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "model.solar_cost = pyo.Var(within=pyo.NonNegativeReals)\n",
+    "model.solar_size_flags = pyo.Var(model.SOLAR_SIZES, within=pyo.Binary, units=units.USD)\n",
+    "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
+    "model.solar_cost = pyo.Var(within=pyo.NonNegativeReals, units=units.USD)\n",
     "\n",
-    "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals)\n",
-    "model.battery_capacity = pyo.Var(within=pyo.NonNegativeReals, bounds=(0, 4))\n",
+    "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
+    "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
+    "model.battery_capacity = pyo.Var(\n",
+    "    within=pyo.NonNegativeReals, bounds=(0, 4), units=units.kWh\n",
+    ")\n",
     "\n",
-    "model.minimizeCost = pyo.Objective(\n",
+    "model.minimize_cost = pyo.Objective(\n",
     "    expr=(model.peak_grid_price * model.peak_grid_consumption)\n",
     "    + (model.off_peak_grid_price * model.off_peak_grid_usage)\n",
     "    + model.solar_cost\n",
     "    + (model.battery_cost_per_kw * model.battery_capacity),\n",
     "    sense=pyo.minimize,\n",
     ")\n",
+    "\n",
     "\n",
     "model.off_peak_constraint = pyo.Constraint(\n",
     "    expr=model.off_peak_load <= model.off_peak_grid_usage + model.battery_capacity\n",
@@ -105,14 +120,16 @@
     ")\n",
     "\n",
     "\n",
-    "def installed_solar_constraint(model):\n",
+    "def solar_cost_constraint(model):\n",
     "    sum_term = sum(\n",
     "        INSTALLATION_SIZES[i] * model.solar_size_flags[i] for i in model.SOLAR_SIZES\n",
     "    )\n",
     "    return model.solar_cost == sum_term\n",
     "\n",
     "\n",
-    "model.consumption_constraint = pyo.Constraint(rule=installed_solar_constraint)\n",
+    "model.solar_cost_constraint = pyo.Constraint(rule=solar_cost_constraint)\n",
+    "\n",
+    "\n",
     "model.sos1_constraint = pyo.SOSConstraint(var=model.solar_size_flags, sos=1)\n",
     "\n",
     "\n",
@@ -125,6 +142,12 @@
     "model.solar_capacity_constraint = pyo.Constraint(rule=solar_capacity_constraint)\n",
     "\n",
     "optimizer = pyo.SolverFactory(\"gurobi\")\n",
+    "assert_units_consistent(model.off_peak_constraint)\n",
+    "assert_units_consistent(model.solar_cost_constraint)\n",
+    "assert_units_consistent(model.peak_constraint)\n",
+    "assert_units_consistent(model.battery_charging_constraint)\n",
+    "# assert_units_consistent(model.solar_capacity_constraint)\n",
+    "assert_units_consistent(model.minimize_cost)\n",
     "optimizer.solve(model)\n",
     "print(\n",
     "    f\"solar capacity: {model.solar_capacity.value} kW, battery capacity: {model.battery_capacity.value} kWh, off peak grid usage: {model.off_peak_grid_usage.value} kW, peak grid consumption: {model.peak_grid_consumption.value} kW\"\n",
