--- a/power.ipynb
+++ b/power.ipynb
@@ -24,13 +24,8 @@
    "outputs": [],
    "source": [
     "import pyomo.environ as pyo\n",
-    "from solar_installations import INSTALLATION_SIZES\n",
     "from pyomo.util.check_units import assert_units_consistent\n",
     "from pyomo.environ import units\n",
-    "from pyomo.core.base import SOSConstraint\n",
-    "from pyomo.util.check_units import _component_data_handlers\n",
-    "\n",
-    "_component_data_handlers[SOSConstraint] = None\n",
     "\n",
     "units.load_definitions_from_strings([\"USD = [currency]\"])"
    ]
@@ -69,9 +64,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
+   "id": "b553f87f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "INSTALLATION_SIZES = {\n",
+    "    3: 9300,\n",
+    "    5: 15000,\n",
+    "    6: 18000,\n",
+    "    8: 12600,\n",
+    "    8: 16800,\n",
+    "    10: 20000,\n",
+    "    12: 24000,\n",
+    "}\n",
+    "\"\"\"\n",
+    "Maps solar installation sizes (in kW) to their corresponding costs (in USD).\n",
+    "\n",
+    "https://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solar capacity: 10.0 kW, battery capacity: 0.0 kWh, off peak grid usage: 20.0 kW, peak grid consumption: 0.0 kW\n",
+      "Model unknown\n",
+      "\n",
+      "  Variables:\n",
+      "    solar_size_flags : Size=6, Index=SOLAR_SIZES, Units=USD\n",
+      "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "          3 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          5 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          6 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "          8 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "         10 :     0 :   1.0 :     1 : False : False : Binary\n",
+      "         12 :     0 :   0.0 :     1 : False : False : Binary\n",
+      "    solar_capacity : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :  10.0 :  None : False : False : NonNegativeReals\n",
+      "    solar_cost : Size=1, Index=None, Units=USD\n",
+      "        Key  : Lower : Value   : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 : 20000.0 :  None : False : False : NonNegativeReals\n",
+      "    peak_grid_consumption : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "    off_peak_grid_usage : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :  20.0 :  None : False : False : NonNegativeReals\n",
+      "    battery_capacity : Size=1, Index=None, Units=kWh\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :     4 : False : False : NonNegativeReals\n",
+      "\n",
+      "  Objectives:\n",
+      "    minimize_cost : Size=1, Index=None, Active=True\n",
+      "        Key  : Active : Value\n",
+      "        None :   True : 20008.0\n",
+      "\n",
+      "  Constraints:\n",
+      "    off_peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :    20 : 20.0 :  None\n",
+      "    peak_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :    10 : 10.0 :  None\n",
+      "    battery_charging_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :  None :  0.0 :   0.0\n",
+      "    solar_cost_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 :  0.0 :   0.0\n",
+      "    solar_capacity_constraint : Size=1\n",
+      "        Key  : Lower : Body : Upper\n",
+      "        None :   0.0 :  0.0 :   0.0\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "model = pyo.ConcreteModel()\n",
     "\n",
@@ -141,13 +216,14 @@
     "\n",
     "model.solar_capacity_constraint = pyo.Constraint(rule=solar_capacity_constraint)\n",
     "\n",
-    "optimizer = pyo.SolverFactory(\"gurobi\")\n",
+    "\n",
     "assert_units_consistent(model.off_peak_constraint)\n",
     "assert_units_consistent(model.solar_cost_constraint)\n",
     "assert_units_consistent(model.peak_constraint)\n",
     "assert_units_consistent(model.battery_charging_constraint)\n",
     "# assert_units_consistent(model.solar_capacity_constraint)\n",
     "assert_units_consistent(model.minimize_cost)\n",
+    "optimizer = pyo.SolverFactory(\"gurobi\")\n",
     "optimizer.solve(model)\n",
     "print(\n",
     "    f\"solar capacity: {model.solar_capacity.value} kW, battery capacity: {model.battery_capacity.value} kWh, off peak grid usage: {model.off_peak_grid_usage.value} kW, peak grid consumption: {model.peak_grid_consumption.value} kW\"\n",
