--- a/power.ipynb
+++ b/power.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "82ea6080",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nhttps://www.constellation.com/energy-101/energy-education/average-home-power-usage.html#how-many-kwh-house-use\\n\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "PEAK_PRICE = 0.5\n",
     "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
@@ -63,10 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b553f87f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMaps solar installation sizes (in kW) to their corresponding costs (in USD).\\n\\nhttps://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "INSTALLATION_SIZES = {\n",
     "    3: 9300,\n",
@@ -86,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
    "outputs": [
