--- a/power.ipynb
+++ b/power.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
    "outputs": [
@@ -218,6 +218,7 @@
     "\n",
     "\n",
     "def solar_cost_constraint(model):\n",
+    "    \"\"\"set the solar cost based on the selected installation size\"\"\"\n",
     "    sum_term = sum(\n",
     "        INSTALLATION_SIZES[i] * model.solar_size_flags[i] for i in model.SOLAR_SIZES\n",
     "    )\n",
