--- a/power.ipynb
+++ b/power.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -32,21 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "82ea6080",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nhttps://www.constellation.com/energy-101/energy-education/average-home-power-usage.html#how-many-kwh-house-use\\n\\n'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "PEAK_PRICE = 0.5\n",
     "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
@@ -74,23 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b553f87f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nMaps solar installation sizes (in kW) to their corresponding costs (in USD).\\n\\nhttps://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "INSTALLATION_SIZES = {\n",
+    "SOLAR_INSTALLATION_SIZES = {\n",
     "    3: 9300,\n",
     "    5: 15000,\n",
     "    6: 18000,\n",
@@ -111,64 +89,7 @@
    "execution_count": null,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solar capacity: 10.0 kW, battery capacity: 0.0 kWh, off peak grid usage: 20.0 kW, peak grid consumption: 0.0 kW\n",
-      "Model unknown\n",
-      "\n",
-      "  Variables:\n",
-      "    solar_size_flags : Size=6, Index=SOLAR_SIZES, Units=USD\n",
-      "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "          3 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "          5 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "          6 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "          8 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "         10 :     0 :   1.0 :     1 : False : False : Binary\n",
-      "         12 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "    solar_capacity : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  10.0 :  None : False : False : NonNegativeReals\n",
-      "    solar_cost : Size=1, Index=None, Units=USD\n",
-      "        Key  : Lower : Value   : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 : 20000.0 :  None : False : False : NonNegativeReals\n",
-      "    peak_grid_consumption : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
-      "    off_peak_grid_usage : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  20.0 :  None : False : False : NonNegativeReals\n",
-      "    battery_capacity : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :   0.0 :     4 : False : False : NonNegativeReals\n",
-      "\n",
-      "  Objectives:\n",
-      "    minimize_cost : Size=1, Index=None, Active=True\n",
-      "        Key  : Active : Value\n",
-      "        None :   True : 20008.0\n",
-      "\n",
-      "  Constraints:\n",
-      "    off_peak_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :    20 : 20.0 :  None\n",
-      "    peak_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :    10 : 10.0 :  None\n",
-      "    battery_charging_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :  None :  0.0 :   0.0\n",
-      "    solar_cost_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :   0.0 :  0.0 :   0.0\n",
-      "    solar_capacity_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :   0.0 :  0.0 :   0.0\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = pyo.ConcreteModel()\n",
     "\n",
@@ -184,7 +105,7 @@
     ")\n",
     "\n",
     "\n",
-    "model.SOLAR_SIZES = pyo.Set(initialize=INSTALLATION_SIZES.keys())\n",
+    "model.SOLAR_SIZES = pyo.Set(initialize=SOLAR_INSTALLATION_SIZES.keys())\n",
     "model.solar_size_flags = pyo.Var(model.SOLAR_SIZES, within=pyo.Binary, units=units.USD)\n",
     "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
     "model.solar_cost = pyo.Var(within=pyo.NonNegativeReals, units=units.USD)\n",
@@ -220,15 +141,13 @@
     "def solar_cost_constraint(model):\n",
     "    \"\"\"set the solar cost based on the selected installation size\"\"\"\n",
     "    sum_term = sum(\n",
-    "        INSTALLATION_SIZES[i] * model.solar_size_flags[i] for i in model.SOLAR_SIZES\n",
+    "        SOLAR_INSTALLATION_SIZES[i] * model.solar_size_flags[i]\n",
+    "        for i in model.SOLAR_SIZES\n",
     "    )\n",
     "    return model.solar_cost == sum_term\n",
     "\n",
     "\n",
     "model.solar_cost_constraint = pyo.Constraint(rule=solar_cost_constraint)\n",
-    "\n",
-    "\n",
-    "model.sos1_constraint = pyo.SOSConstraint(var=model.solar_size_flags, sos=1)\n",
     "\n",
     "\n",
     "def solar_capacity_constraint(model):\n",
@@ -238,6 +157,9 @@
     "\n",
     "\n",
     "model.solar_capacity_constraint = pyo.Constraint(rule=solar_capacity_constraint)\n",
+    "\n",
+    "\n",
+    "model.sos1_constraint = pyo.SOSConstraint(var=model.solar_size_flags, sos=1)\n",
     "\n",
     "\n",
     "assert_units_consistent(model.off_peak_constraint)\n",
