set solar prices to levelized cost

--- a/power.ipynb
+++ b/power.ipynb
@@ -69,13 +69,12 @@
    "outputs": [],
    "source": [
     "SOLAR_INSTALLATION_SIZES = {\n",
-    "    3: 9300,\n",
-    "    5: 15000,\n",
-    "    6: 18000,\n",
-    "    8: 12600,\n",
-    "    8: 16800,\n",
-    "    10: 20000,\n",
-    "    12: 24000,\n",
+    "    3: 0.282,\n",
+    "    5: 0.250,\n",
+    "    6: 0.230,\n",
+    "    8: 0.210,\n",
+    "    10: 0.190,\n",
+    "    12: 0.117,\n",
     "}\n",
     "\"\"\"\n",
     "Maps solar installation sizes (in kW) to their corresponding costs (in USD).\n",
@@ -106,9 +105,11 @@
     "\n",
     "\n",
     "model.SOLAR_SIZES = pyo.Set(initialize=SOLAR_INSTALLATION_SIZES.keys())\n",
-    "model.solar_size_flags = pyo.Var(model.SOLAR_SIZES, within=pyo.Binary, units=units.USD)\n",
+    "model.solar_size_flags = pyo.Var(\n",
+    "    model.SOLAR_SIZES, within=pyo.Binary, units=units.USD / units.kWh\n",
+    ")\n",
     "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
-    "model.solar_cost = pyo.Var(within=pyo.NonNegativeReals, units=units.USD)\n",
+    "model.solar_cost = pyo.Var(within=pyo.NonNegativeReals, units=units.USD / units.kWh)\n",
     "\n",
     "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
     "model.off_peak_grid_usage = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
@@ -119,7 +120,7 @@
     "model.minimize_cost = pyo.Objective(\n",
     "    expr=(model.peak_grid_price * model.peak_grid_consumption)\n",
     "    + (model.off_peak_grid_price * model.off_peak_grid_usage)\n",
-    "    + model.solar_cost\n",
+    "    + (model.solar_capacity * model.solar_cost)\n",
     "    + (model.battery_cost_per_kw * model.battery_capacity),\n",
     "    sense=pyo.minimize,\n",
     ")\n",
