--- a/power.ipynb
+++ b/power.ipynb
@@ -77,7 +77,7 @@
     "    12: 0.117,\n",
     "}\n",
     "\"\"\"\n",
-    "Maps solar installation sizes (in kW) to their corresponding costs (in USD).\n",
+    "Maps solar installation sizes (in kW) to their corresponding costs levelized cost per kWh.\n",
     "\n",
     "https://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\n",
     "\"\"\""
@@ -170,7 +170,7 @@
     "# assert_units_consistent(model.solar_capacity_constraint)\n",
     "assert_units_consistent(model.minimize_cost)\n",
     "optimizer = pyo.SolverFactory(\"gurobi\")\n",
-    "optimizer.solve(model)\n",
+    "optimizer.solve(model, tee=True)\n",
     "print(\n",
     "    f\"solar capacity: {model.solar_capacity.value} kW, battery capacity: {model.battery_capacity.value} kWh, off peak grid usage: {model.off_peak_grid_usage.value} kW, peak grid consumption: {model.peak_grid_consumption.value} kW\"\n",
     ")\n",
