--- a/power.ipynb
+++ b/power.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -26,16 +26,29 @@
     "import pyomo.environ as pyo\n",
     "from pyomo.util.check_units import assert_units_consistent\n",
     "from pyomo.environ import units\n",
+    "import pyomo.gdp as gdp\n",
+    "from pyomo.core import TransformationFactory\n",
     "\n",
     "units.load_definitions_from_strings([\"USD = [currency]\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "82ea6080",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nhttps://www.constellation.com/energy-101/energy-education/average-home-power-usage.html#how-many-kwh-house-use\\n\\n'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "PEAK_PRICE = 0.5\n",
     "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
@@ -63,10 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "b553f87f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMaps solar installation sizes (in kW) to their corresponding costs levelized cost per kWh.\\n\\nhttps://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\\n'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SOLAR_INSTALLATION_SIZES = {\n",
     "    3: 0.282,\n",
@@ -88,7 +112,27 @@
    "execution_count": null,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "GDP_Error",
+     "evalue": "Cannot estimate M for unbounded expressions.\n\t(found while processing constraint 'battery_capacity_disjunct.solar_less_than_peak'). Please specify a value of M or ensure all variables that appear in the constraint are bounded.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mGDP_Error\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 99\u001b[39m\n\u001b[32m     95\u001b[39m \u001b[38;5;66;03m# assert_units_consistent(model.solar_capacity_constraint)\u001b[39;00m\n\u001b[32m     96\u001b[39m assert_units_consistent(model.minimize_cost)\n\u001b[32m---> \u001b[39m\u001b[32m99\u001b[39m \u001b[43mTransformationFactory\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgdp.bigm\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply_to\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    100\u001b[39m optimizer = pyo.SolverFactory(\u001b[33m\"\u001b[39m\u001b[33mgurobi\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    101\u001b[39m optimizer.solve(\n\u001b[32m    102\u001b[39m     model,  \u001b[38;5;66;03m# tee=True\u001b[39;00m\n\u001b[32m    103\u001b[39m )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/core/base/transformation.py:77\u001b[39m, in \u001b[36mTransformation.apply_to\u001b[39m\u001b[34m(self, model, **kwds)\u001b[39m\n\u001b[32m     75\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(model, \u001b[33m'\u001b[39m\u001b[33m_transformation_data\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m     76\u001b[39m     model._transformation_data = TransformationData()\n\u001b[32m---> \u001b[39m\u001b[32m77\u001b[39m reverse_token = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_apply_to\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     78\u001b[39m timer.report()\n\u001b[32m     80\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m reverse_token\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:189\u001b[39m, in \u001b[36mBigM_Transformation._apply_to\u001b[39m\u001b[34m(self, instance, **kwds)\u001b[39m\n\u001b[32m    187\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m PauseGC():\n\u001b[32m    188\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m189\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_apply_to_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43minstance\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    190\u001b[39m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    191\u001b[39m         \u001b[38;5;28mself\u001b[39m._restore_state()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:215\u001b[39m, in \u001b[36mBigM_Transformation._apply_to_impl\u001b[39m\u001b[34m(self, instance, **kwds)\u001b[39m\n\u001b[32m    213\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m preprocessed_targets:\n\u001b[32m    214\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m t.ctype \u001b[38;5;129;01mis\u001b[39;00m Disjunction:\n\u001b[32m--> \u001b[39m\u001b[32m215\u001b[39m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_transform_disjunctionData\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbigM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgdp_tree\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    217\u001b[39m \u001b[38;5;66;03m# issue warnings about anything that was in the bigM args dict that we\u001b[39;00m\n\u001b[32m    218\u001b[39m \u001b[38;5;66;03m# didn't use\u001b[39;00m\n\u001b[32m    219\u001b[39m _warn_for_unused_bigM_args(bigM, \u001b[38;5;28mself\u001b[39m.used_args, logger)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:232\u001b[39m, in \u001b[36mBigM_Transformation._transform_disjunctionData\u001b[39m\u001b[34m(self, obj, index, bigM, gdp_tree)\u001b[39m\n\u001b[32m    230\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m disjunct \u001b[38;5;129;01min\u001b[39;00m obj.disjuncts:\n\u001b[32m    231\u001b[39m     or_expr += disjunct.binary_indicator_var\n\u001b[32m--> \u001b[39m\u001b[32m232\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_transform_disjunct\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdisjunct\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbigM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransBlock\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgdp_tree\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    234\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m obj.xor:\n\u001b[32m    235\u001b[39m     xorConstraint[index] = or_expr == \u001b[32m1\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:272\u001b[39m, in \u001b[36mBigM_Transformation._transform_disjunct\u001b[39m\u001b[34m(self, obj, bigM, transBlock, gdp_tree)\u001b[39m\n\u001b[32m    261\u001b[39m     node = gdp_tree.parent_disjunct(node)\n\u001b[32m    263\u001b[39m \u001b[38;5;66;03m# This is crazy, but if the disjunction has been previously\u001b[39;00m\n\u001b[32m    264\u001b[39m \u001b[38;5;66;03m# relaxed, the disjunct *could* be deactivated.  This is a big\u001b[39;00m\n\u001b[32m    265\u001b[39m \u001b[38;5;66;03m# deal for Hull, as it uses the component_objects /\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    270\u001b[39m \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m    271\u001b[39m \u001b[38;5;66;03m# Transform each component within this disjunct\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m272\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_transform_block_components\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    273\u001b[39m \u001b[43m    \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbigM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43marg_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msuffix_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindicator_expression\u001b[49m\n\u001b[32m    274\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    276\u001b[39m \u001b[38;5;66;03m# deactivate disjunct to keep the writers happy\u001b[39;00m\n\u001b[32m    277\u001b[39m obj._deactivate_without_fixing_indicator()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/gdp_to_mip_transformation.py:298\u001b[39m, in \u001b[36mGDP_to_MIP_Transformation._transform_block_components\u001b[39m\u001b[34m(self, block, disjunct, *args)\u001b[39m\n\u001b[32m    294\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m    295\u001b[39m \u001b[38;5;66;03m# obj is what we are transforming, we pass disjunct\u001b[39;00m\n\u001b[32m    296\u001b[39m \u001b[38;5;66;03m# through so that we will have access to the indicator\u001b[39;00m\n\u001b[32m    297\u001b[39m \u001b[38;5;66;03m# variables down the line.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m298\u001b[39m \u001b[43mhandler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdisjunct\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm.py:342\u001b[39m, in \u001b[36mBigM_Transformation._transform_constraint\u001b[39m\u001b[34m(self, obj, disjunct, bigMargs, arg_list, disjunct_suffix_list, indicator_expression)\u001b[39m\n\u001b[32m    336\u001b[39m     logger.debug(\n\u001b[32m    337\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mGDP(BigM): The value for M for constraint \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    338\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mafter checking suffixes is \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m % (c.name, \u001b[38;5;28mstr\u001b[39m(M))\n\u001b[32m    339\u001b[39m     )\n\u001b[32m    341\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m c.lower \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m M[\u001b[32m0\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m342\u001b[39m     M = (\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_estimate_M\u001b[49m\u001b[43m(\u001b[49m\u001b[43mc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbody\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mc\u001b[49m\u001b[43m)\u001b[49m[\u001b[32m0\u001b[39m] - c.lower, M[\u001b[32m1\u001b[39m])\n\u001b[32m    343\u001b[39m     lower = (M[\u001b[32m0\u001b[39m], \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[32m    344\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m c.upper \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m M[\u001b[32m1\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.13/site-packages/pyomo/gdp/plugins/bigm_mixin.py:227\u001b[39m, in \u001b[36m_BigM_MixIn._estimate_M\u001b[39m\u001b[34m(self, expr, constraint)\u001b[39m\n\u001b[32m    225\u001b[39m expr_lb, expr_ub = \u001b[38;5;28mself\u001b[39m._expr_bound_visitor.walk_expression(expr)\n\u001b[32m    226\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m expr_lb == -interval.inf \u001b[38;5;129;01mor\u001b[39;00m expr_ub == interval.inf:\n\u001b[32m--> \u001b[39m\u001b[32m227\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m GDP_Error(\n\u001b[32m    228\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mCannot estimate M for unbounded \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    229\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mexpressions.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m(found while processing \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    230\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mconstraint \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m). Please specify a value of M \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    231\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mor ensure all variables that appear in the \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    232\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mconstraint are bounded.\u001b[39m\u001b[33m\"\u001b[39m % constraint.name\n\u001b[32m    233\u001b[39m     )\n\u001b[32m    234\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    235\u001b[39m     M = (expr_lb, expr_ub)\n",
+      "\u001b[31mGDP_Error\u001b[39m: Cannot estimate M for unbounded expressions.\n\t(found while processing constraint 'battery_capacity_disjunct.solar_less_than_peak'). Please specify a value of M or ensure all variables that appear in the constraint are bounded."
+     ]
+    }
+   ],
    "source": [
     "model = pyo.ConcreteModel()\n",
     "\n",
@@ -108,7 +152,9 @@
     "model.solar_size_flags = pyo.Var(\n",
     "    model.SOLAR_SIZES, within=pyo.Binary, units=units.USD / units.kWh\n",
     ")\n",
-    "model.solar_capacity = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
+    "model.solar_capacity = pyo.Var(\n",
+    "    within=pyo.NonNegativeReals, units=units.kWh, bounds=(1, 100)\n",
+    ")\n",
     "model.solar_cost = pyo.Var(within=pyo.NonNegativeReals, units=units.USD / units.kWh)\n",
     "\n",
     "model.peak_grid_consumption = pyo.Var(within=pyo.NonNegativeReals, units=units.kWh)\n",
@@ -162,6 +208,23 @@
     "\n",
     "model.sos1_constraint = pyo.SOSConstraint(var=model.solar_size_flags, sos=1)\n",
     "\n",
+    "model.battery_capacity_disjunct = gdp.Disjunct()\n",
+    "model.battery_capacity_disjunct.solar_less_than_peak = pyo.Constraint(\n",
+    "    expr=model.solar_capacity >= model.peak_load\n",
+    ")\n",
+    "model.battery_capacity_disjunct.battery_less_than_excess_solar = pyo.Constraint(\n",
+    "    expr=model.battery_capacity <= model.solar_capacity - model.peak_load\n",
+    ")\n",
+    "\n",
+    "model.battery_capacity_Zero_disjunct = gdp.Disjunct()\n",
+    "model.battery_capacity_Zero_disjunct.battery_Zero = pyo.Constraint(\n",
+    "    expr=model.battery_capacity == 0\n",
+    ")\n",
+    "\n",
+    "model.either_or_disjunction = gdp.Disjunction(\n",
+    "    expr=[model.battery_capacity_disjunct, model.battery_capacity_Zero_disjunct]\n",
+    ")\n",
+    "\n",
     "\n",
     "assert_units_consistent(model.off_peak_constraint)\n",
     "assert_units_consistent(model.solar_cost_constraint)\n",
@@ -169,8 +232,13 @@
     "assert_units_consistent(model.battery_charging_constraint)\n",
     "# assert_units_consistent(model.solar_capacity_constraint)\n",
     "assert_units_consistent(model.minimize_cost)\n",
+    "\n",
+    "\n",
+    "TransformationFactory(\"gdp.bigm\").apply_to(model)\n",
     "optimizer = pyo.SolverFactory(\"gurobi\")\n",
-    "optimizer.solve(model, tee=True)\n",
+    "optimizer.solve(\n",
+    "    model,  # tee=True\n",
+    ")\n",
     "print(\n",
     "    f\"solar capacity: {model.solar_capacity.value} kW, battery capacity: {model.battery_capacity.value} kWh, off peak grid usage: {model.off_peak_grid_usage.value} kW, peak grid consumption: {model.peak_grid_consumption.value} kW\"\n",
     ")\n",
