get rid of duplicate charging constraint

--- a/power.ipynb
+++ b/power.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -34,21 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "82ea6080",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nhttps://www.constellation.com/energy-101/energy-education/average-home-power-usage.html#how-many-kwh-house-use\\n\\n'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "PEAK_PRICE = 0.5\n",
     "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
@@ -62,7 +51,7 @@
     "https://www.lazard.com/research-insights/levelized-cost-of-energyplus-lcoeplus/\n",
     "\"\"\"\n",
     "\n",
-    "PEAK_CONSUMPTION = 10\n",
+    "PEAK_CONSUMPTION = 30\n",
     "\"\"\"\n",
     "https://www.constellation.com/energy-101/energy-education/average-home-power-usage.html#how-many-kwh-house-use\n",
     "\"\"\"\n",
@@ -76,21 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "b553f87f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nMaps solar installation sizes (in kW) to their corresponding costs levelized cost per kWh.\\n\\nhttps://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\\n'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "SOLAR_INSTALLATION_SIZES = {\n",
     "    3: 0.282,\n",
@@ -109,140 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solar capacity: 12.0 kW, battery capacity: 2.0 kWh, off peak grid usage: 18.0 kW, peak grid consumption: 0.0 kW\n",
-      "Model unknown\n",
-      "\n",
-      "  Variables:\n",
-      "    solar_size_flags : Size=6, Index=SOLAR_SIZES, Units=USD/kWh\n",
-      "        Key : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "          3 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "          5 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "          6 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "          8 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "         10 :     0 :   0.0 :     1 : False : False : Binary\n",
-      "         12 :     0 :   1.0 :     1 : False : False : Binary\n",
-      "    solar_capacity : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     1 :  12.0 :   100 : False : False : NonNegativeReals\n",
-      "    solar_cost : Size=1, Index=None, Units=USD/kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 : 0.117 :  None : False : False : NonNegativeReals\n",
-      "    peak_grid_consumption : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
-      "    off_peak_grid_usage : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  18.0 :  None : False : False : NonNegativeReals\n",
-      "    battery_capacity : Size=1, Index=None, Units=kWh\n",
-      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :   2.0 :     4 : False : False : NonNegativeReals\n",
-      "\n",
-      "  Objectives:\n",
-      "    minimize_cost : Size=1, Index=None, Active=True\n",
-      "        Key  : Active : Value\n",
-      "        None :   True : 8.904\n",
-      "\n",
-      "  Constraints:\n",
-      "    off_peak_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :    20 : 20.0 :  None\n",
-      "    peak_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :    10 : 12.0 :  None\n",
-      "    battery_charging_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :  None :  0.0 :   0.0\n",
-      "    solar_cost_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :   0.0 :  0.0 :   0.0\n",
-      "    solar_capacity_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :   0.0 :  0.0 :   0.0\n",
-      "\n",
-      "  Blocks:\n",
-      "    Block _pyomo_gdp_bigm_reformulation\n",
-      "    \n",
-      "      Variables:\n",
-      "        None\n",
-      "    \n",
-      "      Objectives:\n",
-      "        None\n",
-      "    \n",
-      "      Constraints:\n",
-      "        either_or_disjunction_xor : Size=1\n",
-      "            Key  : Lower : Body : Upper\n",
-      "            None :   1.0 :  1.0 :   1.0\n",
-      "    \n",
-      "      Blocks:\n",
-      "        Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[0]\n",
-      "        \n",
-      "          Variables:\n",
-      "            None\n",
-      "        \n",
-      "          Objectives:\n",
-      "            None\n",
-      "        \n",
-      "          Constraints:\n",
-      "            transformedConstraints : Size=2\n",
-      "                Key                                              : Lower : Body : Upper\n",
-      "                ('battery_less_than_excess_solar_1', None, 'ub') :  None :  0.0 :   0.0\n",
-      "                          ('solar_less_than_peak_0', None, 'lb') :    10 : 12.0 :  None\n",
-      "        \n",
-      "          Blocks:\n",
-      "            Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[0].localVarReferences\n",
-      "            \n",
-      "              Variables:\n",
-      "                binary_indicator_var : Size=1, Index=UnindexedComponent_ReferenceSet, ReferenceTo=battery_capacity_disjunct.binary_indicator_var\n",
-      "                    Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "                    None :     0 :   1.0 :     1 : False : False : Binary\n",
-      "            \n",
-      "              Objectives:\n",
-      "                None\n",
-      "            \n",
-      "              Constraints:\n",
-      "                None\n",
-      "        Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[1]\n",
-      "        \n",
-      "          Variables:\n",
-      "            None\n",
-      "        \n",
-      "          Objectives:\n",
-      "            None\n",
-      "        \n",
-      "          Constraints:\n",
-      "            transformedConstraints : Size=2\n",
-      "                Key                            : Lower : Body : Upper\n",
-      "                ('battery_Zero_0', None, 'lb') :   0.0 :  2.0 :  None\n",
-      "                ('battery_Zero_0', None, 'ub') :  None : -2.0 :   0.0\n",
-      "        \n",
-      "          Blocks:\n",
-      "            Block _pyomo_gdp_bigm_reformulation.relaxedDisjuncts[1].localVarReferences\n",
-      "            \n",
-      "              Variables:\n",
-      "                binary_indicator_var : Size=1, Index=UnindexedComponent_ReferenceSet, ReferenceTo=battery_capacity_Zero_disjunct.binary_indicator_var\n",
-      "                    Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "                    None :     0 :   0.0 :     1 : False : False : Binary\n",
-      "            \n",
-      "              Objectives:\n",
-      "                None\n",
-      "            \n",
-      "              Constraints:\n",
-      "                None\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = pyo.ConcreteModel()\n",
-    "\n",
     "\n",
     "model.peak_load = pyo.Param(initialize=PEAK_CONSUMPTION, units=units.kWh)\n",
     "model.off_peak_load = pyo.Param(initialize=OFF_PEAK_CONSUMPTION, units=units.kWh)\n",
@@ -285,10 +135,6 @@
     "\n",
     "model.peak_constraint = pyo.Constraint(\n",
     "    expr=model.peak_load <= model.peak_grid_consumption + model.solar_capacity\n",
-    ")\n",
-    "\n",
-    "model.battery_charging_constraint = pyo.Constraint(\n",
-    "    expr=model.battery_capacity <= model.solar_capacity - model.peak_load\n",
     ")\n",
     "\n",
     "\n",
@@ -336,16 +182,14 @@
     "assert_units_consistent(model.off_peak_constraint)\n",
     "assert_units_consistent(model.solar_cost_constraint)\n",
     "assert_units_consistent(model.peak_constraint)\n",
-    "assert_units_consistent(model.battery_charging_constraint)\n",
+    "assert_units_consistent(model.either_or_disjunction)\n",
     "# assert_units_consistent(model.solar_capacity_constraint)\n",
     "assert_units_consistent(model.minimize_cost)\n",
     "\n",
     "\n",
     "TransformationFactory(\"gdp.bigm\").apply_to(model)\n",
     "optimizer = pyo.SolverFactory(\"gurobi\")\n",
-    "optimizer.solve(\n",
-    "    model,  # tee=True\n",
-    ")\n",
+    "optimizer.solve(model, tee=True)\n",
     "print(\n",
     "    f\"solar capacity: {model.solar_capacity.value} kW, battery capacity: {model.battery_capacity.value} kWh, off peak grid usage: {model.off_peak_grid_usage.value} kW, peak grid consumption: {model.peak_grid_consumption.value} kW\"\n",
     ")\n",
