--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "6a0e563a",
    "metadata": {},
    "outputs": [
@@ -60,14 +60,10 @@
       "        None :     0 :  10.0 :    10 : False : False : NonNegativeReals\n",
       "\n",
       "  Objectives:\n",
-      "    minimize_cost : Size=1, Index=None, Active=True\n",
-      "        Key  : Active : Value\n",
-      "        None :   True :  10.0\n",
+      "    None\n",
       "\n",
       "  Constraints:\n",
-      "    at_least_constraint : Size=1\n",
-      "        Key  : Lower : Body : Upper\n",
-      "        None :  10.0 : 10.0 :  None\n",
+      "    None\n",
       "\n",
       "  Blocks:\n",
       "    Block _pyomo_gdp_bigm_reformulation\n",
@@ -171,18 +167,16 @@
     "model.either_or_disjunction = gdp.Disjunction(\n",
     "    expr=[model.battery_capacity_disjunct, model.battery_capacity_Zero_disjunct]\n",
     ")\n",
+    "\"\"\"\n",
     "\n",
-    "model.at_least_constraint = pyo.Constraint(\n",
-    "    expr=model.battery_capacity + model.solar_capacity >= 10\n",
+    "model.battery_charging_constraint = pyo.Constraint(\n",
+    "    expr=model.battery_capacity <= model.solar_capacity - model.peak_load\n",
     ")\n",
-    "\n",
-    "model.minimize_cost = pyo.Objective(\n",
-    "    expr=model.solar_capacity + model.battery_capacity, sense=pyo.minimize\n",
-    ")\n",
+    "\"\"\"\n",
     "\n",
     "\n",
     "TransformationFactory(\"gdp.bigm\").apply_to(model)\n",
-    "optimizer = pyo.SolverFactory(\"gurobi\")\n",
+    "optimizer = pyo.SolverFactory(\"gurobi\", logfile=\"log.log\")\n",
     "optimizer.solve(\n",
     "    model,  # tee=True\n",
     ")\n",
