add webpack stuff

--- a/power.ipynb
+++ b/power.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9dfaacbf-4a88-4207-95e0-f8c7acdd2960",
    "metadata": {},
    "outputs": [],
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "82ea6080",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nMaps solar installation sizes (in kW) to their corresponding costs levelized cost per kWh.\\n\\nhttps://www.integratesun.com/post/how-much-does-it-cost-to-install-solar-panels-in-2025-1\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "PEAK_PRICE = 0.5\n",
     "\"\"\" https://www.pge.com/assets/pge/docs/account/rate-plans/residential-electric-rate-plan-pricing.pdf \"\"\"\n",
@@ -62,10 +73,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bfa12fbd-6a6a-4c18-a24c-1e43a80027c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Could not locate the 'gurobi' executable, which is required for\n",
+      "solver gurobi\n"
+     ]
+    },
+    {
+     "ename": "ApplicationError",
+     "evalue": "No executable found for solver 'gurobi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mApplicationError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 98\u001b[39m\n\u001b[32m     96\u001b[39m TransformationFactory(\u001b[33m\"\u001b[39m\u001b[33mgdp.bigm\u001b[39m\u001b[33m\"\u001b[39m).apply_to(model)\n\u001b[32m     97\u001b[39m optimizer = pyo.SolverFactory(\u001b[33m\"\u001b[39m\u001b[33mgurobi\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m98\u001b[39m \u001b[43moptimizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtee\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     99\u001b[39m \u001b[38;5;28mprint\u001b[39m(\n\u001b[32m    100\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33msolar capacity: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel.solar_capacity.value\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m kW, battery capacity: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel.battery_capacity.value\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m kWh, off peak grid usage: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel.off_peak_grid_usage.value\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m kW, peak grid consumption: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel.peak_grid_consumption.value\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m kW\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    101\u001b[39m )\n\u001b[32m    102\u001b[39m \u001b[38;5;28mprint\u001b[39m(model.display())\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/energy_optimizer/.venv/lib/python3.13/site-packages/pyomo/opt/base/solvers.py:560\u001b[39m, in \u001b[36mOptSolver.solve\u001b[39m\u001b[34m(self, *args, **kwds)\u001b[39m\n\u001b[32m    557\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msolve\u001b[39m(\u001b[38;5;28mself\u001b[39m, *args, **kwds):\n\u001b[32m    558\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Solve the problem\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m560\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mavailable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexception_flag\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m    561\u001b[39m     \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m    562\u001b[39m     \u001b[38;5;66;03m# If the inputs are models, then validate that they have been\u001b[39;00m\n\u001b[32m    563\u001b[39m     \u001b[38;5;66;03m# constructed! Collect suffix names to try and import from solution.\u001b[39;00m\n\u001b[32m    564\u001b[39m     \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[32m    565\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpyomo\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mbase\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mblock\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BlockData\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/energy_optimizer/.venv/lib/python3.13/site-packages/pyomo/opt/solver/ilmcmd.py:35\u001b[39m, in \u001b[36mILMLicensedSystemCallSolver.available\u001b[39m\u001b[34m(self, exception_flag)\u001b[39m\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._assert_available:\n\u001b[32m     34\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mpyomo\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopt\u001b[49m\u001b[43m.\u001b[49m\u001b[43msolver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshellcmd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSystemCallSolver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mavailable\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexception_flag\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m     38\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m     39\u001b[39m executable = pyomo.common.Executable(\u001b[33m\"\u001b[39m\u001b[33milmlist\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/energy_optimizer/.venv/lib/python3.13/site-packages/pyomo/opt/solver/shellcmd.py:140\u001b[39m, in \u001b[36mSystemCallSolver.available\u001b[39m\u001b[34m(self, exception_flag)\u001b[39m\n\u001b[32m    138\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m exception_flag:\n\u001b[32m    139\u001b[39m         msg = \u001b[33m\"\u001b[39m\u001b[33mNo executable found for solver \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m140\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m ApplicationError(msg % \u001b[38;5;28mself\u001b[39m.name)\n\u001b[32m    141\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m    142\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[31mApplicationError\u001b[39m: No executable found for solver 'gurobi'"
+     ]
+    }
+   ],
    "source": [
     "model = pyo.ConcreteModel()\n",
     "\n",
@@ -182,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "energy_optimizer",
    "language": "python",
    "name": "python3"
   },
